Refactor : 제목으로 검색하기 메서드명 분명하게 리팩토링